# repolens

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile.api  Dockerfile.web  Dockerfile.worker  Makefile  PRODUCT.md  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml
.codex/: hooks.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 00f3a9fd34dd_add_chat_sessions_and_messages.py  248a1cdbee97_add_repository_files_and_analyses.py  30abd9758e60_remove_cost_usd_column.py  311d91274456_add_is_superuser_and_repositories.py  54f8be6e5c78_fix_server_defaults_on_repositories.py  85bb31a7cdaa_add_code_chunks_table.py  87d82cfeeb95_add_plan_sessions_and_versions.py  880253444708_initial_users_and_projects.py  885ef361c0e5_add_progress_to_repositories.py  b8261a605512_add_analysis_reliability_columns.py
apps/api/app/: deps.py  main.py  schemas.py  settings.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/routes/: admin.py  analysis.py  chat.py  github.py  plans.py  projects.py  repositories.py  search.py  webhooks.py
apps/api/app/schemas/: __init__.py  admin.py  analysis.py  api_response.py  chat.py  github.py  plan.py  project.py  repository.py  search.py
apps/api/app/services/: admin_service.py  chat_crud.py  chat_grounding.py  chat_service.py  chat_tools.py  clone.py  github_service.py  intent_router.py  performance.py  plan_service.py  project_service.py  queue.py  repository_service.py  search_engine.py  search_service.py  webhook_service.py
apps/api/tests/: conftest.py  create_test_db.py
apps/api/tests/analysis/: test_analysis.py  test_prompt_injection.py
apps/api/tests/chat/: test_chat.py
apps/api/tests/fixtures/repositories/broken-app/: bad_imports.py  main.py
apps/api/tests/fixtures/repositories/django-app/: README.md  apps.py  models.py  settings.py  urls.py  views.py
apps/api/tests/fixtures/repositories/fastapi-app/: README.md  config.py  main.py  models.py  package.json  requirements.txt  routes.py
apps/api/tests/planner/: test_planner.py
apps/api/tests/projects/: test_projects.py
apps/api/tests/repositories/: test_repositories.py
apps/api/tests/search/: test_search.py
apps/web/: middleware.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.mts
docs/: architecture.md  contributing.md  troubleshooting.md
docs/adr/: 0001-monorepo-layout-and-dev-prod-parity-strategy.md  0002-python-tooling-uv-workspace.md  0003-js-tooling-pnpm-workspaces.md  0004-managed-data-infra-neon-and-upstash.md  (+18 more)
evaluation/: evaluate_prompts.py  malicious_readme.md  report.json  report.md
workers/: analysis_service.py  chunk_service.py  deterministic_extractor.py  embed_service.py  key_file_service.py  pyproject.toml  snapshot_service.py  worker.py
(+55 files in other folders)
