[project]
name = "repolens-workers"
version = "0.1.0"
description = "RepoLens ARQ background workers"
requires-python = ">=3.11"
dependencies = [
    "repolens-db",
    "arq>=0.26",
    "redis>=5.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "openai>=2.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-languages>=1.10.2",
    "repolens-prompts",
]

[tool.uv.sources]
repolens-db = { workspace = true }
repolens-prompts = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
