[project]
name = "repolens-api"
version = "0.1.0"
description = "RepoLens FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "repolens-db",
    "alembic>=1.13",
    "arq>=0.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "svix>=1.13",
    "structlog>=24.1",
    "clerk-backend-api>=6.0",
    "httpx>=0.27",
    "slowapi>=0.1.10",
    "openai>=2.44.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-languages>=1.10.2",
]

[tool.uv.sources]
repolens-db = { workspace = true }
