[project]
name = "repolens-api"
version = "0.1.0"
description = "RepoLens FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "repolens-db",
    "alembic>=1.13",
    "arq>=0.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "svix>=1.13",
    "structlog>=24.1",
    "clerk-backend-api>=6.0",
    "httpx>=0.27",
    "slowapi>=0.1.10",
    "openai>=2.44.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-languages>=1.10.2",
    "repolens-prompts",
]

[tool.uv.sources]
repolens-db = { workspace = true }
repolens-prompts = { workspace = true }

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
    "fakeredis>=2.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
